[project]
name = "tutorial-7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy>=2.2.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
